; ModuleID = '/home/carl/AnghaBench/SoftEtherVPN/src/Mayaqua/extr_Str.c_IsEmptyStr.c'
source_filename = "/home/carl/AnghaBench/SoftEtherVPN/src/Mayaqua/extr_Str.c_IsEmptyStr.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @IsEmptyStr(i8* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i8*, align 8
  %4 = alloca i8*, align 8
  store i8* %0, i8** %3, align 8
  %5 = load i8*, i8** %3, align 8
  %6 = icmp eq i8* %5, null
  br i1 %6, label %7, label %8

7:                                                ; preds = %1
  store i32 1, i32* %2, align 4
  br label %22

8:                                                ; preds = %1
  %9 = load i8*, i8** %3, align 8
  %10 = call i8* @CopyStr(i8* %9)
  store i8* %10, i8** %4, align 8
  %11 = load i8*, i8** %4, align 8
  %12 = call i32 @Trim(i8* %11)
  %13 = load i8*, i8** %4, align 8
  %14 = call i64 @StrLen(i8* %13)
  %15 = icmp eq i64 %14, 0
  br i1 %15, label %16, label %19

16:                                               ; preds = %8
  %17 = load i8*, i8** %4, align 8
  %18 = call i32 @Free(i8* %17)
  store i32 1, i32* %2, align 4
  br label %22

19:                                               ; preds = %8
  %20 = load i8*, i8** %4, align 8
  %21 = call i32 @Free(i8* %20)
  store i32 0, i32* %2, align 4
  br label %22

22:                                               ; preds = %19, %16, %7
  %23 = load i32, i32* %2, align 4
  ret i32 %23
}

declare dso_local i8* @CopyStr(i8*) #1

declare dso_local i32 @Trim(i8*) #1

declare dso_local i64 @StrLen(i8*) #1

declare dso_local i32 @Free(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
